[ci] Use declared constructor for newInstance deprecation post jdk 9+